too much to tell

--- a/home-manager/features/sway/waybar/style.css
+++ b/home-manager/features/sway/waybar/style.css
@@ -3,7 +3,7 @@
 * {
     border: none;
     /*background: none;*/
-    font-family: 'M+2 Nerd Font', 'Symbols Nerd Font';
+    font-family: 'Ubuntu', 'Symbols Nerd Font';
     font-size: 18px;
     /*font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';*/
 }
