--- a/home-manager/features/hyprland/waybar/style.css
+++ b/home-manager/features/hyprland/waybar/style.css
@@ -1,160 +1,315 @@
-@import "/home/nokogiri/.config/colors.css";
+/* Thanks https://github.com/JaKooLit ! */
 
 * {
-    border: none;
-    /*background: none;*/
-    font-family: 'JetBrainsMono Nerd Font Propo', 'Hack', 'Symbols Nerd Font';
-    font-size:18px;
-    font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
+  font-family: "IntoneMono Nerd Font Propo";
+  font-weight: bold;
+  font-size: 18px;
+  min-height: 0;
+  /* set font-size to 100% if font scaling is set to 1.00 using nwg-look */
+  /*font-size: 100%;*/
+  font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
+  padding: 1px;
+
 }
 
-tooltip {
-    font-size: 20px;
-    border: 2px solid @background-darker;
-    background: @background;
-    color: @foreground;
-}
-
-tooltip * {
-    background: none;
-    background-color: transparent;
-    color: @foreground;
-    padding: 3px 3px 3px 3px;
-}
-
-.modules-left {
-    margin: 0px 8px 8px 0px;
-    border-top-left-radius: 0px;
-    border-top-right-radius: 0px;
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 10px;
-}
-
-.modules-center {
-    border-top-left-radius: 0px;
-    border-top-right-radius: 0px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-.modules-right {
-    border-top-left-radius: 0px;
-    border-top-right-radius: 0px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 0px;
-}
-
-#waybar {
-/*    font-size: 18px;*/
-/*    padding-left: 8px;*/
-}
-
+/*@import '../../.cache/wal/colors-waybar.css';*/
+ @import "/home/nokogiri/.config/colors.css";
 window#waybar {
-    background: @background-darker; /*linear-gradient(0deg, @background 20%, @background-darker 100%);*/
-    transition-duration: 1.5s;
-    transition-property: color;
+  transition-property: background-color;
+  transition-duration: 0.5s;
+  background: transparent;
+  border-radius: 10px;
 }
 
 window#waybar.hidden {
-    opacity: 0.0;
+  opacity: 0.2;
 }
 
-#workspaces {
-    font-size: 24px;
+#waybar.empty #window {
+  background: none;
 }
 
-#workspaces button {
-    background: none;
-    color: @text;
-    transition-duration: 0.6s;
-    transition-property: color;
-}
+/* This section can be use if you want to separate waybar modules */
+.modules-left, .modules-center, .modules-right {
+	background: @background; 
+ 	border: 1.2px solid @background;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	padding-right: 4px;
+	padding-left: 4px;
+	border-radius: 10px;
 
-/*#workspaces button:hover, 
-#workspaces button.persistent:hover *{
-    background: @blue;
-    box-shadow: inset 0 -2px transparent;
-}*/
+} 
 
-#workspaces button.active {
-    background: none;
-    color: @purple;
-}
+.modules-left, .modules-right {
+	padding-top: 2px;
+	padding-bottom: 2px;
+  padding-right: 4px;
+	padding-left: 4px;
+} 
 
-#workspaces button.persistent {
-    background: none;
-    color: @cyan;
-}
-#workspaces button.urgent {
-    background: none;
-    color: @critical;
-}
-
-#workspaces button.empty {
-    background: none;
-    color: @cyan;
-}
-/* 1st block */
-#custom-weather {
-    font-family: " JetBrainsMono Nerd Font";
-    font-size: 18px;
-    background-color: transparent;
-    color: @foreground;
-/*    padding: 0px 10px 0px 10px;*/
-}
-#clock,
 #backlight,
+#backlight-slider,
 #battery,
-#custom-media,
+#bluetooth,
+#clock,
 #cpu,
+#disk,
+#idle_inhibitor,
+#keyboard-state,
 #memory,
 #mode,
-#temperature,
+#mpris,
 #network,
-#window,
 #pulseaudio,
-#tray {
-    background-color: transparent;
-    color: @foreground;
-    padding: 0px 10px 0px 10px;
+#pulseaudio-slider,
+#taskbar button,
+#taskbar,
+#temperature,
+#tray,
+#window,
+#wireplumber,
+#workspaces,
+#custom-backlight,
+#custom-cycle_wall,
+#custom-keybinds,
+#custom-keyboard,
+#custom-light_dark,
+#custom-lock,
+#custom-menu,
+#custom-power_vertical,
+#custom-power,
+#custom-swaync,
+#custom-updater,
+#custom-weather,
+#custom-weather.clearNight,
+#custom-weather.cloudyFoggyDay,
+#custom-weather.cloudyFoggyNight,
+#custom-weather.default, 
+#custom-weather.rainyDay,
+#custom-weather.rainyNight,
+#custom-weather.severe,
+#custom-weather.showyIcyDay,
+#custom-weather.snowyIcyNight,
+#custom-weather.sunnyDay {
+	padding-top: 3px;
+	padding-bottom: 3px;
+	padding-right: 6px;
+	padding-left: 6px;
 }
 
+#idle_inhibitor {
+  color: @color2;
+}
 
-#battery.charging {
-    background-color: transparent;
-    color: @green;
+#bluetooth,
+#backlight {
+  color: @color1;
+}
+
+#battery {
+  color: @cursor;
 }
 
 @keyframes blink {
-    to {
-        background-color: transparent;
-        color: @red;
-    }
+  to {
+    color: @color5;
+  }
 }
 
 #battery.critical:not(.charging) {
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    background-color: @critical;
-    color: #FFF;
+  background-color: @color5;
+  color: rgba(255,255,255,0.8);
+  animation-name: blink;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  box-shadow: inset 0 -3px transparent;
 }
 
-label:focus {
-    background-color: transparent;
+#clock {
+  color: @cursor;
+}
+
+#cpu {
+  color: @color1 ;
+}
+
+#custom-keyboard,
+#memory {
+  color: @color1;
+}
+
+#disk {
+  color: @color1;
+}
+
+#temperature {
+  color: @color1;
 }
 
 #temperature.critical {
-    background-color: #EB4D4B;
+  background-color: @color5;
 }
 
+#tray > .passive {
+  -gtk-icon-effect: dim;
+}
+#tray > .needs-attention {
+  -gtk-icon-effect: highlight;
+}
 
-#language {
-    background: #00B093;
-    color: #740864;
-    margin: 0 5px;
-    min-width: 16px;
-    padding: 0 5px;
+#keyboard-state {
+  color: @color2;
+}
+
+#workspaces button {
+    box-shadow: none;
+	  text-shadow: none;
+    padding: 0px;
+    border-radius: 9px;
+    padding-left: 8px;
+    padding-right: 8px;
+    animation: gradient_f 20s ease-in infinite;
+    transition: all 0.6s cubic-bezier(.55,-0.68,.48,1.682);
+}
+
+#workspaces button:hover {
+	border-radius: 9px;
+	/* color: @overlay0; */
+	background-color: rgba(255,255,255,0.2);
+ 	padding-left: 8px;
+  padding-right: 8px;
+    animation: gradient_f 20s ease-in infinite;
+    transition: all 0.5s cubic-bezier(.55,-0.68,.48,1.682);
+}
+
+#workspaces button.persistent {
+	color: rgba(255, 255, 255, 0.2);
+	border-radius: 10px;
+}
+
+#workspaces button.active {
+	color: @purple;
+ 	border-radius: 10px;
+  padding-left: 8px;
+  padding-right: 8px;
+  animation: gradient_f 20s ease-in infinite;
+  transition: all 0.5s cubic-bezier(.55,-0.68,.48,1.682);
+}
+
+#workspaces button.urgent {
+	color: @color5;
+ 	border-radius: 0px;
+}
+
+#taskbar button.active {
+    padding-left: 8px;
+    padding-right: 8px;
+    animation: gradient_f 20s ease-in infinite;
+    transition: all 0.4s cubic-bezier(.55,-0.68,.48,1.682);
+}
+
+#taskbar button:hover {
+    padding-left: 2px;
+    padding-right: 2px;
+    animation: gradient_f 20s ease-in infinite;
+    transition: all 0.4s cubic-bezier(.55,-0.68,.48,1.682);
+}
+
+#custom-cava_mviz {
+	color: @color1;
+}
+
+#custom-menu {
+  color: @color6;
+}
+
+#custom-power {
+  color: @color6;
+}
+
+#custom-updater {
+  color: @color6;
+}
+
+#custom-light_dark {
+  color: @color1;
+}
+
+#custom-weather {
+  color: @color6;
+}
+
+#custom-lock {
+  color: @color6;
+}
+
+#pulseaudio {
+  color: @color6;
+}
+
+#pulseaudio.bluetooth {
+  color: @color6;
+}
+#pulseaudio.muted {
+  color: @color8;
+}
+
+#window {
+  color: @color1;
+}
+
+#custom-waybar-mpris {
+  color:@color1;
+}
+
+#network {
+  color: @cursor;
+}
+
+#network.disconnected,
+#network.disabled {
+  background-color: @color5;
+  color: @text;
+}
+#pulseaudio-slider slider {
+	min-width: 0px;
+	min-height: 0px;
+	opacity: 0;
+	background-image: none;
+	border: none;
+	box-shadow: none;
+}
+
+#pulseaudio-slider trough {
+	min-width: 80px;
+	min-height: 5px;
+	border-radius: 5px;
+}
+
+#pulseaudio-slider highlight {
+	min-height: 10px;
+	border-radius: 5px;
+}
+
+#backlight-slider slider {
+	min-width: 0px;
+	min-height: 0px;
+	opacity: 0;
+	background-image: none;
+	border: none;
+	box-shadow: none;
+}
+
+#backlight-slider trough {
+	min-width: 80px;
+	min-height: 10px;
+	border-radius: 5px;
+}
+
+#backlight-slider highlight {
+	min-width: 10px;
+	border-radius: 5px;
 }
