Pre Massive Cleanup ++ Swotch to Plasma6

--- a/home-manager/features/hyprland/waybar/style.css
+++ b/home-manager/features/hyprland/waybar/style.css
@@ -19,6 +19,8 @@ window#waybar {
   transition-duration: 0.5s;
   background: transparent;
   border-radius: 10px;
+  margin: 2px;
+  padding: 2px;
 }
 
 window#waybar.hidden {
