a lot and cleaning

--- a/home-manager/features/hyprland/waybar/style.css
+++ b/home-manager/features/hyprland/waybar/style.css
@@ -1,7 +1,7 @@
 /* Thanks https://github.com/JaKooLit ! */
 
 * {
-  font-family: "IntoneMono Nerd Font Propo";
+  font-family: "JetBrainsMono Nerd Font Propo";
   font-weight: bold;
   font-size: 18px;
   min-height: 0;
