--- a/home-manager/features/hyprland/waybar/style.css
+++ b/home-manager/features/hyprland/waybar/style.css
@@ -2,8 +2,9 @@
 
 * {
   font-family: "JetBrainsMono Nerd Font Propo";
-  font-weight: bold;
-  font-size: 18px;
+  /*font-family: "Monofur Nerd Font Propo";*/
+  font-weight: normal;
+  font-size: 16px;
   min-height: 0;
   /* set font-size to 100% if font scaling is set to 1.00 using nwg-look */
   /*font-size: 100%;*/
