--- a/home-manager/features/hyprland/waybar/style.css
+++ b/home-manager/features/hyprland/waybar/style.css
@@ -8,20 +8,19 @@
   min-height: 0;
   /* set font-size to 100% if font scaling is set to 1.00 using nwg-look */
   /*font-size: 100%;*/
-  font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
+  /*font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';*/
   padding: 1px;
 
 }
 
-/*@import '../../.cache/wal/colors-waybar.css';*/
  @import "/home/nokogiri/.config/colors.css";
 window#waybar {
   transition-property: background-color;
   transition-duration: 0.5s;
   background: transparent;
   border-radius: 10px;
-  margin: 2px;
-  padding: 2px;
+  /*margin: 2px;*/
+  /*padding: 2px;*/
 }
 
 window#waybar.hidden {
@@ -36,17 +35,20 @@ window#waybar.hidden {
 .modules-left, .modules-center, .modules-right {
 	background: @background; 
  	border: 1.2px solid @background;
-	padding-top: 2px;
-	padding-bottom: 2px;
+	padding-top: 6px;
+	padding-bottom: 6px;
 	padding-right: 4px;
 	padding-left: 4px;
 	border-radius: 10px;
-
+  margin-top: 8px;
+  margin-left: 8px;
+  margin-right: 8px;
+  margin-bottom: 0px;
 } 
 
 .modules-left, .modules-right {
-	padding-top: 2px;
-	padding-bottom: 2px;
+	padding-top: 6px;
+	padding-bottom: 6px;
   padding-right: 4px;
 	padding-left: 4px;
 } 
