--- a/home-manager/features/hyprland/waybar/style.css
+++ b/home-manager/features/hyprland/waybar/style.css
@@ -2,14 +2,13 @@
 
 * {
   font-family: "JetBrainsMono Nerd Font Propo";
-  /*font-family: "Monofur Nerd Font Propo";*/
   font-weight: normal;
-  font-size: 16px;
+  font-size: 15px;
   min-height: 0;
   /* set font-size to 100% if font scaling is set to 1.00 using nwg-look */
   /*font-size: 100%;*/
   /*font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';*/
-  padding: 1px;
+  padding: 2px;
 
 }
 
@@ -46,12 +45,12 @@ window#waybar.hidden {
   margin-bottom: 0px;
 } 
 
-.modules-left, .modules-right {
+/*.modules-left, .modules-right {
 	padding-top: 6px;
 	padding-bottom: 6px;
   padding-right: 4px;
 	padding-left: 4px;
-} 
+} */
 
 #backlight,
 #backlight-slider,
@@ -97,10 +96,10 @@ window#waybar.hidden {
 #custom-weather.showyIcyDay,
 #custom-weather.snowyIcyNight,
 #custom-weather.sunnyDay {
-	padding-top: 3px;
-	padding-bottom: 3px;
-	padding-right: 6px;
-	padding-left: 6px;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	padding-right: 2px;
+	padding-left: 2px;
 }
 
 #idle_inhibitor {
