--- a/home-manager/features/hyprland/waybar/style.css
+++ b/home-manager/features/hyprland/waybar/style.css
@@ -1,49 +1,50 @@
 /* Thanks https://github.com/JaKooLit ! */
 
 * {
-  font-family: "JetBrainsMono Nerd Font Propo";
-  font-weight: normal;
-  font-size: 15px;
-  min-height: 0;
-  /* set font-size to 100% if font scaling is set to 1.00 using nwg-look */
-  /*font-size: 100%;*/
-  /*font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';*/
-  padding: 2px;
-
+    font-family: "JetBrainsMono Nerd Font Propo";
+    font-weight: normal;
+    font-size: 15px;
+    min-height: 0;
+    /* set font-size to 100% if font scaling is set to 1.00 using nwg-look */
+    /*font-size: 100%;*/
+    /*font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';*/
+    padding: 2px;
 }
 
- @import "/home/nokogiri/.config/colors.css";
+@import "/home/nokogiri/.config/colors.css";
 window#waybar {
-  transition-property: background-color;
-  transition-duration: 0.5s;
-  background: transparent;
-  border-radius: 10px;
-  /*margin: 2px;*/
-  /*padding: 2px;*/
+    transition-property: background-color;
+    transition-duration: 0.5s;
+    background: transparent;
+    border-radius: 10px;
+    /*margin: 2px;*/
+    /*padding: 2px;*/
 }
 
 window#waybar.hidden {
-  opacity: 0.2;
+    opacity: 0.2;
 }
 
 #waybar.empty #window {
-  background: none;
+    background: none;
 }
 
 /* This section can be use if you want to separate waybar modules */
-.modules-left, .modules-center, .modules-right {
-	background: @background; 
- 	border: 1.2px solid @background;
-	padding-top: 6px;
-	padding-bottom: 6px;
-	padding-right: 4px;
-	padding-left: 4px;
-	border-radius: 10px;
-  margin-top: 8px;
-  margin-left: 8px;
-  margin-right: 8px;
-  margin-bottom: 0px;
-} 
+.modules-left,
+.modules-center,
+.modules-right {
+    background: @background;
+    border: 1.2px solid @background;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-right: 4px;
+    padding-left: 4px;
+    border-radius: 10px;
+    margin-top: 8px;
+    margin-left: 8px;
+    margin-right: 8px;
+    margin-bottom: 0px;
+}
 
 /*.modules-left, .modules-right {
 	padding-top: 6px;
@@ -89,231 +90,233 @@ window#waybar.hidden {
 #custom-weather.clearNight,
 #custom-weather.cloudyFoggyDay,
 #custom-weather.cloudyFoggyNight,
-#custom-weather.default, 
+#custom-weather.default,
 #custom-weather.rainyDay,
 #custom-weather.rainyNight,
 #custom-weather.severe,
 #custom-weather.showyIcyDay,
 #custom-weather.snowyIcyNight,
 #custom-weather.sunnyDay {
-	padding-top: 1px;
-	padding-bottom: 1px;
-	padding-right: 2px;
-	padding-left: 2px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    padding-right: 2px;
+    padding-left: 2px;
 }
 
 #idle_inhibitor {
-  color: @color2;
+    color: @color2;
 }
 
 #bluetooth,
 #backlight {
-  color: @color1;
+    color: @color1;
 }
 
 #battery {
-  color: @cursor;
+    color: @cursor;
 }
 
 @keyframes blink {
-  to {
-    color: @color5;
-  }
+    to {
+        color: @color5;
+    }
 }
 
 #battery.critical:not(.charging) {
-  background-color: @color5;
-  color: rgba(255,255,255,0.8);
-  animation-name: blink;
-  animation-duration: 0.5s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  box-shadow: inset 0 -3px transparent;
+    background-color: @color5;
+    color: rgba(255, 255, 255, 0.8);
+    animation-name: blink;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    box-shadow: inset 0 -3px transparent;
 }
 
 #clock {
-  color: @cursor;
+    color: @cursor;
+    padding-left: 4px;
+    padding-right: 4px;
 }
 
 #cpu {
-  color: @color1 ;
+    color: @color1;
 }
 
 #custom-keyboard,
 #memory {
-  color: @color1;
+    color: @color1;
 }
 
 #disk {
-  color: @color1;
+    color: @color1;
 }
 
 #temperature {
-  color: @color1;
+    color: @color1;
 }
 
 #temperature.critical {
-  background-color: @color5;
+    background-color: @color5;
 }
 
 #tray > .passive {
-  -gtk-icon-effect: dim;
+    -gtk-icon-effect: dim;
 }
 #tray > .needs-attention {
-  -gtk-icon-effect: highlight;
+    -gtk-icon-effect: highlight;
 }
 
 #keyboard-state {
-  color: @color2;
+    color: @color2;
 }
 
 #workspaces button {
     box-shadow: none;
-	  text-shadow: none;
+    text-shadow: none;
     padding: 0px;
     border-radius: 9px;
     padding-left: 8px;
     padding-right: 8px;
     animation: gradient_f 20s ease-in infinite;
-    transition: all 0.6s cubic-bezier(.55,-0.68,.48,1.682);
+    transition: all 0.6s cubic-bezier(0.55, -0.68, 0.48, 1.682);
 }
 
 #workspaces button:hover {
-	border-radius: 9px;
-	/* color: @overlay0; */
-	background-color: rgba(255,255,255,0.2);
- 	padding-left: 8px;
-  padding-right: 8px;
+    border-radius: 9px;
+    /* color: @overlay0; */
+    background-color: rgba(255, 255, 255, 0.2);
+    padding-left: 8px;
+    padding-right: 8px;
     animation: gradient_f 20s ease-in infinite;
-    transition: all 0.5s cubic-bezier(.55,-0.68,.48,1.682);
+    transition: all 0.5s cubic-bezier(0.55, -0.68, 0.48, 1.682);
 }
 
 #workspaces button.persistent {
-	color: rgba(255, 255, 255, 0.2);
-	border-radius: 10px;
+    color: rgba(255, 255, 255, 0.2);
+    border-radius: 10px;
 }
 
 #workspaces button.active {
-	color: @purple;
- 	border-radius: 10px;
-  padding-left: 8px;
-  padding-right: 8px;
-  animation: gradient_f 20s ease-in infinite;
-  transition: all 0.5s cubic-bezier(.55,-0.68,.48,1.682);
+    color: @purple;
+    border-radius: 10px;
+    padding-left: 8px;
+    padding-right: 8px;
+    animation: gradient_f 20s ease-in infinite;
+    transition: all 0.5s cubic-bezier(0.55, -0.68, 0.48, 1.682);
 }
 
 #workspaces button.urgent {
-	color: @color5;
- 	border-radius: 0px;
+    color: @color5;
+    border-radius: 0px;
 }
 
 #taskbar button.active {
     padding-left: 8px;
     padding-right: 8px;
     animation: gradient_f 20s ease-in infinite;
-    transition: all 0.4s cubic-bezier(.55,-0.68,.48,1.682);
+    transition: all 0.4s cubic-bezier(0.55, -0.68, 0.48, 1.682);
 }
 
 #taskbar button:hover {
     padding-left: 2px;
     padding-right: 2px;
     animation: gradient_f 20s ease-in infinite;
-    transition: all 0.4s cubic-bezier(.55,-0.68,.48,1.682);
+    transition: all 0.4s cubic-bezier(0.55, -0.68, 0.48, 1.682);
 }
 
 #custom-cava_mviz {
-	color: @color1;
+    color: @color1;
 }
 
 #custom-menu {
-  color: @color6;
+    color: @color6;
 }
 
 #custom-power {
-  color: @color6;
+    color: @color6;
 }
 
 #custom-updater {
-  color: @color6;
+    color: @color6;
 }
 
 #custom-light_dark {
-  color: @color1;
+    color: @color1;
 }
 
 #custom-weather {
-  color: @color6;
+    color: @color6;
 }
 
 #custom-lock {
-  color: @color6;
+    color: @color6;
 }
 
 #pulseaudio {
-  color: @color6;
+    color: @color6;
 }
 
 #pulseaudio.bluetooth {
-  color: @color6;
+    color: @color6;
 }
 #pulseaudio.muted {
-  color: @color8;
+    color: @color8;
 }
 
 #window {
-  color: @color1;
+    color: @color1;
 }
 
 #custom-waybar-mpris {
-  color:@color1;
+    color: @color1;
 }
 
 #network {
-  color: @cursor;
+    color: @cursor;
 }
 
 #network.disconnected,
 #network.disabled {
-  background-color: @color5;
-  color: @text;
+    background-color: @color5;
+    color: @text;
 }
 #pulseaudio-slider slider {
-	min-width: 0px;
-	min-height: 0px;
-	opacity: 0;
-	background-image: none;
-	border: none;
-	box-shadow: none;
+    min-width: 0px;
+    min-height: 0px;
+    opacity: 0;
+    background-image: none;
+    border: none;
+    box-shadow: none;
 }
 
 #pulseaudio-slider trough {
-	min-width: 80px;
-	min-height: 5px;
-	border-radius: 5px;
+    min-width: 80px;
+    min-height: 5px;
+    border-radius: 5px;
 }
 
 #pulseaudio-slider highlight {
-	min-height: 10px;
-	border-radius: 5px;
+    min-height: 10px;
+    border-radius: 5px;
 }
 
 #backlight-slider slider {
-	min-width: 0px;
-	min-height: 0px;
-	opacity: 0;
-	background-image: none;
-	border: none;
-	box-shadow: none;
+    min-width: 0px;
+    min-height: 0px;
+    opacity: 0;
+    background-image: none;
+    border: none;
+    box-shadow: none;
 }
 
 #backlight-slider trough {
-	min-width: 80px;
-	min-height: 10px;
-	border-radius: 5px;
+    min-width: 80px;
+    min-height: 10px;
+    border-radius: 5px;
 }
 
 #backlight-slider highlight {
-	min-width: 10px;
-	border-radius: 5px;
+    min-width: 10px;
+    border-radius: 5px;
 }
