--- a/home-manager/features/hyprland/waybar/style.css
+++ b/home-manager/features/hyprland/waybar/style.css
@@ -5,9 +5,6 @@
     font-weight: normal;
     font-size: 16px;
     min-height: 0;
-    /* set font-size to 100% if font scaling is set to 1.00 using nwg-look */
-    /*font-size: 100%;*/
-    /*font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';*/
     padding: 2px;
 }
 
@@ -249,7 +246,7 @@ window#waybar.empty #window {
     color: @color6;
 }
 #pulseaudio.muted {
-    color: @color8;
+    color: @red;
 }
 
 #window {
@@ -268,18 +265,4 @@ window#waybar.empty #window {
 #network.disabled {
     background-color: @color5;
     color: @text;
-}
-#pulseaudio-slider slider {
-    min-width: 0px;
-    min-height: 0px;
-    opacity: 0;
-    background-image: none;
-    border: none;
-    box-shadow: none;
-}
-
-#pulseaudio-slider trough {
-    min-width: 80px;
-    min-height: 5px;
-    border-radius: 5px;
 }
