--- a/home-manager/features/hyprland/waybar/style.css
+++ b/home-manager/features/hyprland/waybar/style.css
@@ -41,7 +41,7 @@ window#waybar.empty #window {
 .modules-left,
 .modules-right {
     background: @surface1;
-    border: 1.2px solid @background;
+    border: 1.2px solid @surface0;
     padding-top: 2px;
     padding-bottom: 2px;
     padding-right: 1px;
