--- a/home-manager/features/hyprland/waybar/style.css
+++ b/home-manager/features/hyprland/waybar/style.css
@@ -33,15 +33,16 @@ window#waybar.empty #window {
     background-color: transparent;
 }
 
-/* This section can be use if you want to separate waybar modules */
+/* This section can be use if you want to separate waybar modules
 .modules-center {
     background: transparent;
-}
+}*/
 
 .modules-left,
+.modules-center,
 .modules-right {
     background: @surface1;
-    border: 1.2px solid @surface0;
+    border: none; /*border: 1.2px solid @surface0;*/
     padding-top: 2px;
     padding-bottom: 2px;
     padding-right: 1px;
