--- a/home-manager/features/hyprland/waybar/style.css
+++ b/home-manager/features/hyprland/waybar/style.css
@@ -18,10 +18,10 @@ window#waybar {
 
     border-radius: 10px;
     margin-top: 0px;
-    padding-top: 1px;
+    padding-top: 0px;
     padding-left: 1px;
     padding-right: 1px;
-    padding-bottom: 1px;
+    padding-bottom: 0px;
 }
 
 window#waybar.hidden {
@@ -40,17 +40,17 @@ window#waybar.empty #window {
 
 .modules-left,
 .modules-right {
-    background: @surface1;
+    background: transparent;
     border: none; /*border: 1.2px solid @surface0;*/
-    padding-top: 2px;
-    padding-bottom: 2px;
+    padding-top: 0px;
+    padding-bottom: 1px;
     padding-right: 1px;
     padding-left: 1px;
     border-radius: 10px;
-    margin-top: 2px;
+    margin-top: 0px;
     margin-left: 2px;
     margin-right: 2px;
-    margin-bottom: 2px;
+    margin-bottom: 1px;
 }
 
 .modules-center.empty {
