--- a/home-manager/features/hyprland/waybar/style.css
+++ b/home-manager/features/hyprland/waybar/style.css
@@ -14,13 +14,14 @@ window#waybar {
     transition-property: background-color;
     transition-duration: 0.5s;
 
-    background: transparent;
-
-    border-radius: 10px;
+    /*background: transparent;*/
+    /*background: #1e1e2e;*/
+    background: rgba(30, 30, 46, 0.3);
+    border-radius: 0px 0px 14px 14px;
     margin-top: 0px;
     padding-top: 0px;
-    padding-left: 1px;
-    padding-right: 1px;
+    padding-left: 0px;
+    padding-right: 0px;
     padding-bottom: 0px;
 }
 
